--- a/individual_work/css-flex-1/index.html
+++ b/individual_work/css-flex-1/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     
+    <div class="flex-container">
+        <div class="flex-items">item1</div>
+        <div class="flex-items">item2</div>
+        <div class="flex-items">item3</div>
+     </div>
+
+
 </body>
 </html>
