--- a/individual_work/css-flex-1/index.html
+++ b/individual_work/css-flex-1/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     
+
+    <div class="nejvycVysokyVyssyDiv">
     <div class="flex-container">
         <div class="flex-items">item1</div>
         <div class="flex-items">item2</div>
         <div class="flex-items">item3</div>
      </div>
-
+    </div>
 
 </body>
 </html>
