--- a/individual_work/pololetni-prace/index.html
+++ b/individual_work/pololetni-prace/index.html
@@ -79,7 +79,7 @@
                 <div class="contacts">
                     <a href="http://facebook.com/" id="facebook"><img src="images/facebook.png" ></a>
                     <a href="http://twitter.com/" id="instagram"><img src="images/instagram.png" ></a>
-                    <a href="http://www.youtube.com/" id="youtube"><img src="images/youtube.png" ></a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="youtube"><img src="images/youtube.png" ></a>
                 </div>
             </div>
 
