--- a/individual_work/pololetni-prace/products.html
+++ b/individual_work/pololetni-prace/products.html
@@ -50,19 +50,33 @@
         <div class="content">
 
             <div id="div1">
-                <h1> Prestižní Web </h1>
+                <h1> Zde je list našich produktů </h1>
                 <br>
                 <div id="div2">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi nihil aspernatur vero
-                        obcaecati, neque soluta accusamus asperiores inventore eveniet expedita cum doloribus vitae
-                        harum?
-                        Delectus vel consequuntur fuga in.
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe commodi nihil aspernatur vero
-                        obcaecati, neque soluta accusamus asperiores inventore eveniet expedita cum doloribus vitae
-                        harum?
-                        Delectus vel consequuntur fuga in.
-                        
+                   
+                    <div class="productCollumn">
+                    <p>
+                        Prestižní auto
                     </p>
+                        <img class="productsImage" src="images/gold-car.jpg">
+
+
+                    <p>Asus ROG -STRIX-RTX3090-O24G-GAMING NVIDIA GeForce RTX 3090 24 GB GDDR6X</p>
+                    <img class="productsImage" src="images/rtx.jpg">
+
+                    </div>
+
+                    <div class="productCollumn">
+
+                        <p>Sauronův prsten</p>
+                        <img id="ring" class="productsImage" src="images/ring.png">
+
+                        <p>
+                            Zlatý řetěz
+                        </p>
+                        <img class="productsImage" src="images/gold-chain.jpg">
+                    </div>
+
                 </div>
             </div>
 
