--- a/individual_work/madera-2c-web-figma-1/info.html
+++ b/individual_work/madera-2c-web-figma-1/info.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="index-container">
+    <div class="info-container">
         <div class="header">
             <img src="images/logo.png" alt="logo">
             <img src="images/burger menu.png" alt="menu">
