--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -19,31 +19,14 @@
         </div>
 
 
-        <div class="content">
+        <div class="contacts-content">
 
-           <div class="info-list">
 
-            <img src="images/coronavirus.png" alt="covid">
-            <h3> aktuálně covid-19</h3>
 
-            <img src="images/luggage.png" alt="covid">
-            <h3> průběh dovolené</h3>
 
-            <img src="images/sale.png" alt="covid">
-            <h3> slevový systém </h3>
 
-            <img src="images/doc.png" alt="covid">
-            <h3> smlouva o zájezdu</h3>
-
-            <img src="images/doc.png" alt="covid">
-            <h3> cestovní pojištění</h3>
-
-            <img src="images/doc.png" alt="covid">
-            <h3> obchodní podmínky</h3>
-           </div>
 
         </div>
-        
         
 
         <div class="footer">
