--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -7,27 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
 
 </head>
 
 <body>
 
-    <div class="info-container">
+    <div class="contacts-container">
         <div class="header">
             <img src="images/logo.png" alt="logo">
             <img src="images/burger menu.png" alt="menu">
-        </div>
-
-
-        <div class="contacts-content">
-
-
-
-
-
 
         </div>
-        
+
+
+        <div class="content">
+
+            <div class="container">
+                <div class="row">
+                  <div class="col col-lg-6">
+                    Column
+                  </div>
+                  <div class="col">
+                    Column
+                  </div>
+                  <div class="col">
+                    Column
+                  </div>
+                </div>
+              </div>
+
+
+
+
+        </div>
+
 
         <div class="footer">
 
@@ -42,7 +59,9 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
