--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -44,6 +44,10 @@
                         <img src="images/madeira.png" alt="Atlantické ostrovy">
                         <div class="offer-text">
                         <h3>Atlantické ostrovy </h3>
+                        <br>
+                        <p>
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.
+                        </p>
                         </div>
                     </div>
 
@@ -51,6 +55,10 @@
                         <img src="images/sardinie.png" alt="Západní středomoří">
                         <div class="offer-text">
                         <h3>Západní středomoří</h3>
+                        <br>
+                        <p>
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.
+                        </p>
                         </div>
                     </div>
 
@@ -59,6 +67,10 @@
                         <img src="images/kypr.png" alt="Východní středomoří">
                         <div class="offer-text">
                         <h3>Východní středomoří</h3>
+                        <br>
+                        <p>
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.                        </p>
+                        </div>
                         </div>
 
                     </div>
