--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/reset.css" rel="stylesheet">
 
 </head>
 
@@ -14,8 +15,8 @@
 
     <div class="index-container">
         <div class="header">
-            <img src="images/logo.png" alt="logo">
-            <img src="images/burger menu.png" alt="menu">
+            <img src="images/logo.png" alt="logo" id="logo">
+            <img src="images/burger menu.png" alt="menu" id="burger">
         </div>
 
 
@@ -23,13 +24,12 @@
 
             <div class="gray-box">
                 <h1>DOVOLENÁ S NÁMI</h1>
-                <br>
 
                 <div class="gray-text-box">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
-                    lacinia. Sed convallis magna eu sem.
-                </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam in lorem sit amet leo accumsan
+                        lacinia. Sed convallis magna eu sem.
+                    </p>
                 </div>
 
                 <div class="gray-button">
@@ -40,56 +40,53 @@
             <div class="index-second-half">
                 <h3> PROZKOUMEJTE KRÁSY EVROPSKÝCH OSTROVŮ</h3>
 
-                    <div class="offer">
-                        <img src="images/madeira.png" alt="Atlantické ostrovy">
-                        <div class="offer-text">
+                <div class="offer">
+                    <img src="images/madeira.png" alt="Atlantické ostrovy">
+                    <div class="offer-text">
                         <h3>Atlantické ostrovy </h3>
                         <br>
                         <p>
-                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis
+                            gravida nulla.
                         </p>
-                        </div>
                     </div>
+                </div>
 
-                    <div class="offer">
-                        <img src="images/sardinie.png" alt="Západní středomoří">
-                        <div class="offer-text">
+                <div class="offer">
+                    <img src="images/sardinie.png" alt="Západní středomoří">
+                    <div class="offer-text">
                         <h3>Západní středomoří</h3>
                         <br>
                         <p>
-                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis
+                            gravida nulla.
                         </p>
-                        </div>
                     </div>
-
-                    <div class="offer">
-
-                        <img src="images/kypr.png" alt="Východní středomoří">
-                        <div class="offer-text">
+                </div>
+                <div class="offer">
+                    <img src="images/kypr.png" alt="Východní středomoří">
+                    <div class="offer-text">
                         <h3>Východní středomoří</h3>
                         <br>
                         <p>
-                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis gravida nulla.                        </p>
-                        </div>
-                        </div>
-
+                            Sed vel lectus. Donec odio tempus molestie, porttitor ut, iaculis quis, sem. Donec iaculis
+                            gravida nulla.
+                        </p>
                     </div>
-
-            </div>
-                <div class="gray-button">
-                    <h2>CHCI S VÁMI!</h2>
                 </div>
+            </div>
         </div>
-        
-        
-
-        <div class="footer">
-
-            <h2>
-                Obchodní podmínky ochrana osobních údajů
-            </h2>
-
+        <div class="gray-button">
+            <h2>CHCI S VÁMI!</h2>
         </div>
+    </div>
+    <div class="footer">
+
+        <h2>
+            Obchodní podmínky ochrana osobních údajů
+        </h2>
+
+    </div>
 
 
     </div>
