--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -83,9 +83,12 @@
     <div class="footer">
 
         <h2>
-            Obchodní podmínky ochrana osobních údajů
+            Obchodní podmínky 
         </h2>
 
+        <h2>
+            ochrana osobních údajů
+        </h2>
     </div>
 
 
