--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -44,14 +44,14 @@
             </div>
                 <div class="offer-container">
 
-                    <div class="image-collumn">
+                    <div class="image-column">
                         <img src="images/madeira.png" alt="Atlantické ostrovy">
                         <img src="images/sardinie.png" alt="Západní středomoří">
                         <img src="images/kypr.png" alt="Východní středomoří">
 
                     </div>
 
-                    <div class="text-collumn">
+                    <div class="text-column">
                         <div class="offer-text">
                         <h3>Atlantické ostrovy </h3>
                        
@@ -89,7 +89,7 @@
 
             </div>
         </div>
-        <div class="gray-button">
+        <div class="gray-button-2">
             <h2>CHCI S VÁMI!</h2>
         </div>
     </div>
