1 done 5 more to go......

--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -16,7 +16,7 @@
     <div class="index-container">
         <div class="header">
             <img src="images/logo.png" alt="logo" id="logo">
-            <img src="images/burger menu.png" alt="menu" id="burger">
+           <a href="contacts.html"> <img src="images/burger menu.png" alt="menu" id="burger" ></a>
         </div>
 
 
