--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -13,10 +13,10 @@
 
 <body>
 
-    <div class="index-container">
+    <div class="container">
         <div class="header">
-            <img src="images/logo.png" alt="logo" id="logo">
-           <a href="contacts.html"> <img src="images/burger menu.png" alt="menu" id="burger" ></a>
+            <a href="index.html" class="logo"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="contacts.html" class="burger" > <img src="images/burger menu.png" alt="menu"></a>
         </div>
 
 
