--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/reset.css" rel="stylesheet">
 
 
 
@@ -16,32 +15,26 @@
 
 <body>
 
-    <div class="contacts-container">
+    <div class="container">
         <div class="header">
-            <img src="images/logo.png" alt="logo">
-            <img src="images/burger menu.png" alt="menu">
+            <a  href="index.html" class="logo"><img src="images/logo.png" alt="logo" ></a>
+           <a href="info.html" class="burger"> <img src="images/burger menu.png" alt="menu"> </a>
 
         </div>
 
 
         <div class="content">
 
-            <div class="container">
-                <div class="row">
-                  <div class="col col-lg-6">
-                    Column
-                  </div>
-                  <div class="col">
-                    Column
-                  </div>
-                  <div class="col">
-                    Column
-                  </div>
-                </div>
-              </div>
+          <h1>kontakt</h1>
+        
+          <div class="contact-container"> 
 
-
-
+                <div class="contact-info"> <p> Jméno</p> </div>
+                <div class="contact-info"> <p> Příjmení</p> </div>               
+                <div class="contact-info"> <p> E-mail</p> </div>
+                <div class="contact-info"> <p> Telefon</p> </div>
+                <div class="contact-info"> <p> Vaše zpráva</p> </div> 
+          </div>
 
         </div>
 
@@ -49,9 +42,11 @@
         <div class="footer">
 
             <h2>
-                Obchodní podmínky ochrana osobních údajů
+                Obchodní podmínky 
             </h2>
-
+            <h2>
+              ochrana osobních údajů
+          </h2>
         </div>
 
 
