--- a/individual_work/madera-2c-web-figma-1/info.html
+++ b/individual_work/madera-2c-web-figma-1/info.html
@@ -14,8 +14,8 @@
 
     <div class="info-container">
         <div class="header">
-            <img src="images/logo.png" alt="logo">
-            <img src="images/burger menu.png" alt="menu">
+           <a href="index.html"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="contacts.html" ><img src="images/burger menu.png" alt="menu"> </a>
         </div>
 
 
