--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -24,9 +24,10 @@
 
 
         <div class="content">
-
+            <div id="contact-headline">
           <h1>kontakt</h1>
-        
+            </div >
+
           <div class="contact-container"> 
 
                 <div class="contact-info"> <p> Jméno</p> </div>
@@ -37,7 +38,10 @@
           </div>
 
         </div>
-
+        
+        <div class="gray-button-2">
+            <h2>CHCI S VÁMI!</h2>
+        </div>
 
         <div class="footer">
 
