--- a/individual_work/madera-2c-web-figma-1/info.html
+++ b/individual_work/madera-2c-web-figma-1/info.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/reset.css" rel="stylesheet">
 
 </head>
 
@@ -14,8 +15,8 @@
 
     <div class="info-container">
         <div class="header">
-           <a href="index.html"> <img src="images/logo.png" alt="logo"> </a>
-            <a href="contacts.html" ><img src="images/burger menu.png" alt="menu"> </a>
+            <a href="index.html" class="logo"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="contacts.html" class="burger" > <img src="images/burger menu.png" alt="menu"></a>
         </div>
 
 
