--- a/individual_work/madera-2c-web-figma-1/index.html
+++ b/individual_work/madera-2c-web-figma-1/index.html
@@ -17,6 +17,12 @@
         <div class="header">
             <a href="index.html" class="logo"> <img src="images/logo.png" alt="logo"> </a>
             <a href="contacts.html" class="burger" > <img src="images/burger menu.png" alt="menu"></a>
+           
+            <div class="expanded-menu">
+                <a href="index.html"><h3>dovolené</h3></a>
+                <a href="info.html"><h3> praktické informace</h3></a>
+                <a href="contacts.html"><h3>kontakt</h3></a>
+            </div>
         </div>
 
 
@@ -92,20 +98,19 @@
         <div class="gray-button-2">
             <h2>CHCI S VÁMI!</h2>
         </div>
+        
+        <div class="footer">
+
+            <h2>
+                Obchodní podmínky 
+            </h2>
+
+            <h2>
+                ochrana osobních údajů
+            </h2>
+        </div>
     </div>
-    <div class="footer">
-
-        <h2>
-            Obchodní podmínky 
-        </h2>
-
-        <h2>
-            ochrana osobních údajů
-        </h2>
-    </div>
-
-
-    </div>
+   
 
 
 
