--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -17,9 +17,20 @@
 
     <div class="contact-container-0">
         <div class="header">
-            <a  href="index.html" class="logo"><img src="images/logo.png" alt="logo" ></a>
-           <a href="info.html" class="burger"> <img src="images/burger menu.png" alt="menu"> </a>
+            <a href="index.html" class="logo"> <img src="images/logo.png" alt="logo"> </a>
+            <a href="info.html" class="burger"> <img src="images/burger menu.png" alt="menu"></a>
 
+            <div class="expanded-menu">
+                <a href="index.html">
+                    <h3>dovolená</h3>
+                </a>
+                <a href="info.html">
+                    <h3> praktické informace</h3>
+                </a>
+                <a href="contacts.html" class="selected">
+                    <h3>kontakt</h3>
+                </a>
+            </div>
         </div>
 
 
