--- a/individual_work/madera-2c-web-figma-1/info.html
+++ b/individual_work/madera-2c-web-figma-1/info.html
@@ -17,8 +17,19 @@
         <div class="header">
             <a href="index.html" class="logo"> <img src="images/logo.png" alt="logo"> </a>
             <a href="contacts.html" class="burger"> <img src="images/burger menu.png" alt="menu"></a>
-        </div>
 
+            <div class="expanded-menu">
+                <a href="index.html">
+                    <h3>dovolená</h3>
+                </a>
+                <a href="info.html" class="selected">
+                    <h3> praktické informace</h3>
+                </a>
+                <a href="contacts.html">
+                    <h3>kontakt</h3>
+                </a>
+            </div>
+            </div>
 
         <div class="info-content">
 
@@ -38,19 +49,16 @@
                 <div class="div12">  <div class="info-headline"> <h3> obchodní podmínky</h3> </div> </div>
                 </div>
 
-
-
-
-
-         
-
-        </div>
+           </div>
 
 
         <div class="footer">
 
             <h2>
-                Obchodní podmínky ochrana osobních údajů
+                Obchodní podmínky 
+            </h2>
+            <h2>
+                ochrana osobních údajů
             </h2>
 
         </div>
