FINAL COMMIT, ITS DONE o_o

--- a/individual_work/madera-2c-web-figma-1/contacts.html
+++ b/individual_work/madera-2c-web-figma-1/contacts.html
@@ -34,24 +34,24 @@
         </div>
 
 
-        <div class="content">
+        <div class="contact-content">
             <div id="contact-headline">
           <h1>kontakt</h1>
             </div >
-
+            <div class="centering-contact-container">
           <div class="contact-container"> 
 
                 <div class="contact-info"> <p> Jméno</p> </div>
                 <div class="contact-info"> <p> Příjmení</p> </div>               
                 <div class="contact-info"> <p> E-mail</p> </div>
                 <div class="contact-info"> <p> Telefon</p> </div>
-                <div class="contact-info"> <p> Vaše zpráva</p> </div> 
+                <div class="contact-info" class="thicc-box"><div class="thicc-box-2"> <p> Vaše zpráva</p> </div></div> 
           </div>
 
-         
+         </div>
           <div class="gray-button-3">
               <div class="my-existance-is-miserable">
-            <h2>CHCI S VÁMI!</h2>
+            <h2>odeslat</h2>
             </div>
         </div>
 
