--- a/individual_work/zaverecna-prace/index.html
+++ b/individual_work/zaverecna-prace/index.html
@@ -1,16 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Dobré jídlo</title>
+  </head>
+  <body>
+    <div class="container-1">
+        <nav class="navbar navbar-light" style="background-color: #970c0cea">
 
-<body>
+            <a class="navbar-brand" href="index.html"> <img src="/images/home-logo.svg"></a>
 
 
-</body>
+        </nav>
+        <div class="big-image">
+
+            <div class="headline">
+                <h1> Top 5 Food </h1>
+            </div>
+        </div> 
+    </div>
+    <div class="container-2">
+        <div class="food">
+            <h2>
+                5. Hamburger
+            </h2>
+            <img src="images/image 3.png">
+        </div>
+        <div class="food">
+            <h2>
+                4. Chicken
+            </h2>
+            <img src="images/image 3.png">
+        </div>
+        <div class="food">
+            <h2>
+                3. Cheeseburger
+            </h2>
+            <img src="images/image 3.png">
+        </div>
+        <div class="food">
+            <h2>
+                2. Hamburger
+            </h2>
+            <img src="images/image 3.png">
+        </div>
+    </div>
+  </body>
 </html>
