--- a/individual_work/zaverecna-prace/index.html
+++ b/individual_work/zaverecna-prace/index.html
@@ -37,19 +37,29 @@
             <h2>
                 4. Chicken
             </h2>
-            <img src="images/image 3.png">
+            <img src="images/image-2.png">
         </div>
         <div class="food">
             <h2>
                 3. Cheeseburger
             </h2>
-            <img src="images/image 3.png">
+            <img src="images/image-4.jpg" style="width:40rem ;">
         </div>
         <div class="food">
             <h2>
-                2. Hamburger
+                2. Fish
             </h2>
-            <img src="images/image 3.png">
+            <img src="images/image-6.png">
+        </div>
+        <div class="food">
+            <h2>
+                1. Dog
+            </h2>
+            <img src="images/iamge-7.jpeg" style="width:50rem ;">
+        </div>
+        <div class="footer">
+           <a href="#top"> <h2>Back to top</h2></a>
+
         </div>
     </div>
   </body>
